# ai-workflows

./: .env.example  README.md  pyproject.toml
agents/building-blocks/: 1-intelligence.py  2-memory.py  3-tools.py  4-validation.py  5-control.py  6-recovery.py  7-feedback.py  README.md  requirements.txt
utils/: llm_completion.py  llm_config.py  llm_parse.py
workflows/1-introduction/: 1-basic.py  2-structured.py  3-tools.py  4-retrieval.py
workflows/2-workflow-patterns/: 1-prompt-chaining.py  2-routing.py  3-parallelizaton.py  4-orchestrator.py
