[project]
name = "ai-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "instructor>=1.15.1",
    "ipykernel>=7.2.0",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[tool.setuptools.packages.find]
where = ["."]